# ge-license-manager

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  setup.sh  setup_and_deploy.sh  test_production.py
deployment/: deploy.py  register_ge_app.py
ge_governance_agent/: __init__.py  agent.py  auth.py
ge_governance_agent/.adk/: session.db
ge_governance_agent/tools/: __init__.py  audit_logger.py  bigquery_setup.py  license_manager.py  log_analytics.py  notifier.py  usage_auditor.py
tests/: test_audit_logger.py  test_bigquery_setup.py  test_license_manager.py  test_log_analytics.py  test_notifier.py  test_usage_auditor.py
