[project]
name = "ge-user-level-analytics"
version = "0.1.0"
description = "ADK agent for Gemini Enterprise user activity tracking and license revocation"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.0.0",
    "google-cloud-bigquery==3.25.0",
    "google-api-python-client==2.140.0",
    "google-auth==2.34.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-logging==3.11.0",
    "vertexai>=1.65.0",
    "python-dotenv==1.0.1",
    "pydantic==2.8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
